--- a/index.html.html
+++ b/index.html.html
@@ -1,10 +1,24 @@
  <!DOCTYPE HTML>
  <html>
  <head>
+     <link rel="stylesheet" href="style.css">
  <meta charset="utf-8">
- <title>Hello, World!</title>
+
+     <!-- Requirements -->
+ <!-- Have at least 1 image -->
+ <!-- Styled using CSS -->
+ <!-- Contain a link to somewhere on the internet -->
+
+ <title>Alexis Hale</title>
  </head>
  <body>
- Hello, World!
+
+ <h1>Welcome to my webpage!</h1>
+ <p> This is my first attempt at an HTML site.</p>
+ <img src="CaboPic.jpg" width="1024" height="768">
+  <p>Cabo, Mexico (December, 2015)</p>
+
+ <h2>Follow me on social media!</h2>
+ <a href = https://www.instagram.com/xixi743/>Check out my Instagram</a>
  </body>
  </html>
