Centered all Text

--- a/index.html.html
+++ b/index.html.html
@@ -19,6 +19,6 @@
   <p>Cabo, Mexico (December, 2015)</p>
 
  <h2>Follow me on social media!</h2>
- <a href = https://www.instagram.com/xixi743/>Check out my Instagram</a>
+ <a id="IG" href = https://www.instagram.com/xixi743/>Check out my Instagram</a>
  </body>
  </html>
