Fixed H1 and Cursor

--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
      <link rel="stylesheet" href="style.css">
  <meta charset="utf-8">
 
-     <!-- Requirements -->
- <!-- Have at least 1 image -->
- <!-- Styled using CSS -->
- <!-- Contain a link to somewhere on the internet -->
-
  <title>Alexis Hale</title>
  </head>
  <body>
 
- <h1>Welcome to my webpage!</h1>
+ <h1>Welcome to my web page!</h1>
  <p> This is my first attempt at an HTML site.</p>
  <img src="CaboPic.jpg" width="1024" height="768">
-  <p>Cabo, Mexico (December, 2015)</p>
+  <p>Cabo, Mexico (December 2015)</p>
 
  <h2>Follow me on social media!</h2>
  <a id="IG" href = https://www.instagram.com/xixi743/>Check out my Instagram</a>
