--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
  <body>
 
  <h1>Welcome to my webpage!</h1>
+
+ <ul1>
+  <li><a href=#Home>Home</a></li>
+  <li><a href=#About>About</a></li>
+  <li><a href=#Contact>Contact</a> </li>
+ </ul1>
+
  <p> This is my first attempt at an HTML site.</p>
  <img src="CaboPic.jpg" width="1024" height="768">
-  <p>Cabo, Mexico (December, 2015)</p>
+  <p>Cabo, Mexico (December 2015)</p>
 
  <h2>Follow me on social media!</h2>
  <a id="IG" href = https://www.instagram.com/xixi743/>Check out my Instagram</a>
