--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
  </ul1>
 
  <p> This is my first attempt at an HTML site.</p>
+
+ <!-- Use this button in a form to pop-up a message when the user clicks on it -->
+ <form>
+  <input type="button" value="Click here for a compliment!" onClick="alert('You are beautiful and intelligent. Don't forget to smile today'); return true">
+ </form>
+<!-- End of message alert -->
+
  <img src="CaboPic.jpg" width="1024" height="768">
   <p>Cabo, Mexico (December 2015)</p>
 
